--- a/utama-html/templates/dashboard.html
+++ b/utama-html/templates/dashboard.html
@@ -39,6 +39,9 @@
     />
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div>
@@ -190,9 +193,12 @@
                   <span class="dashboard-text36">Lamp</span>
                 </div>
                 <div class="dashboard-frame20">
-                  <div class="dashboard-container4">
-                    <button class="dashboard-data8" id="all-lamp-btn">
+                  <div class="dashboard-container3">
+                      <button class="dashboard-data8" id="all-lamp-btn">
                       <span class="dashboard-text40">All Lamp</span>
+                    </button>
+                      <button class="dashboard-data6" id="lamp-auto-btn">
+                      <span class="dashboard-text38">Auto</span>
                     </button>
                   </div>
                 </div>
