--- a/utama-html/templates/dashboard.html
+++ b/utama-html/templates/dashboard.html
@@ -184,8 +184,7 @@
                 </div>
               </div>
               <div class="dashboard-humidty">
-                <div class="dashboard-icon6">
-                    <img
+                    <imgs
                       src="{{ url_for('static', filename='assets/wbincandescent5777-v23r.svg') }}"
                       alt="Lamp Icon"
                       class="dashboard-wbincandescent2"
