--- a/utama-html/templates/dashboard.html
+++ b/utama-html/templates/dashboard.html
@@ -14,7 +14,6 @@
         font-family: Inter;
         font-size: 16px;
       }
-
       body {
         font-weight: 400;
         font-style:normal;
@@ -24,24 +23,16 @@
         line-height: 1.15;
         color: var(--dl-color-theme-neutral-dark);
         background: var(--dl-color-theme-neutral-light);
-
         fill: var(--dl-color-theme-neutral-dark);
       }
     </style>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/animate.css@4.1.1/animate.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
-      data-tag="font"
-    />
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" />
+    <link rel="stylesheet" href="https://unpkg.com/animate.css@4.1.1/animate.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}" />
   </head>
   <body>
     <div>
@@ -77,22 +68,15 @@
             <div class="dashboard-frame3">
               <p class="dashboard-text14" id="terrarium-message-full">
                 <span class="dashboard-text15">Terrarium Condition is </span>
-                <span class="dashboard-text16" id="terrarium-condition">Optimal</span>
+                <span class="dashboard-text16" id="terrarium-condition"> -- </span>
                 <br />
-                <span id="terrarium-message">your terrarium is good, no need to do anything.</span>
+                <span id="terrarium-message">Loading data...</span>
               </p>
             </div>
           </section>
 
           <section class="dashboard-sensor-reading1">
             <div class="dashboard-sensor-reading2">
-              <div class="dashboard-resetwrench1">
-                <img
-                  src="{{ url_for('static', filename='assets/resetwrench5275-jy9l.svg') }}"
-                  alt="Sensor Icon"
-                  class="dashboard-resetwrench2"
-                />
-              </div>
               <span class="dashboard-text19">Sensor Reading</span>
             </div>
             <div class="dashboard-card-container1">
@@ -158,13 +142,9 @@
           <section class="dashboard-actuator">
             <div class="dashboard-sensor-reading3">
               <span class="dashboard-text32">Actuator</span>
-              <img
-                src="{{ url_for('static', filename='assets/ixmachinec5763-hsj.svg') }}"
-                alt="Actuator Icon"
-                class="dashboard-ixmachinec"
-              />
             </div>
             <div class="dashboard-card-container2">
+              
               <div class="dashboard-soil-moisture">
                 <div class="dashboard-icon5">
                   <img
@@ -183,8 +163,10 @@
                   </button>
                 </div>
               </div>
+              
               <div class="dashboard-humidty">
-                    <imgs
+                <div class="dashboard-icon6">
+                    <img
                       src="{{ url_for('static', filename='assets/wbincandescent5777-v23r.svg') }}"
                       alt="Lamp Icon"
                       class="dashboard-wbincandescent2"
@@ -192,16 +174,15 @@
                   <span class="dashboard-text36">Lamp</span>
                 </div>
                 <div class="dashboard-frame20">
-                  <div class="dashboard-container3">
-                      <button class="dashboard-data8" id="all-lamp-btn">
-                      <span class="dashboard-text40">All Lamp</span>
-                    </button>
-                      <button class="dashboard-data6" id="lamp-auto-btn">
-                      <span class="dashboard-text38">Auto</span>
-                    </button>
-                  </div>
+                  <button class="dashboard-data6" id="lamp-auto-btn">
+                    <span class="dashboard-text38">Auto</span>
+                  </button>
+                  <button class="dashboard-data8" id="all-lamp-btn">
+                    <span class="dashboard-text40">All Lamp</span>
+                  </button>
                 </div>
               </div>
+
               <div class="dashboard-temperature">
                 <div class="dashboard-icon7">
                     <img
@@ -215,6 +196,7 @@
                   <span class="dashboard-text42">Feed</span>
                 </button>
               </div>
+
             </div>
           </section>
         </div>
